[build-system]
requires = ["setuptools>=48", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.env
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
exclude = "docs"
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pydocstyle]
add_ignore = "D400"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning",
]
