[metadata]
description = Give audio that brown sound
name = brownify
long_description = file: README.md
long_description_content_type = text/markdown
#license = None
#license_file = None
url = https://github.com/gth828r/brownify
project_urls =
    Documentation = https://github.com/gth828r/brownify
    Source = https://github.com/gth828r/brownify
download_url = https://github.com/gth828r/brownify
author = Tim Upthegrove
author_email = tim.upthegrove@gmail.com
maintainer = Tim Upthegrove
maintainer_email = tim.upthegrove@gmail.com
keywords = audio, brown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
setup_requires =
    setuptools>=48

python_requires = >=3.8
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    librosa==0.8.0
    numpy==1.19.2
    pydub==0.25.1
    pyparsing==2.4.7
    pytube==12.0.0
    soundfile==0.10.3.post1
    spleeter==2.3.0
    tqdm==4.62.2

[flake8]
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
